--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "2024 NSF-NRT Reward"
-excerpt: "Best oral presentation award <br/><img src='/images/photo_2024-09-16_17-24-52.jpg'>"
+excerpt: "Best oral presentation award <br/><img src='/images/photo_2024-09-16_17-24-52.jpg' style='width:50%;>"
 collection: portfolio
 ---
 
