--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,6 +1,6 @@
 ---
 title: "WSU Intramural Futsal League Championship"
-excerpt: "Team <br/><img src='/images/photo_2024-10-17_12-59-05.jpg' style='width:50%;'>"
+excerpt: "Team (served as a captain) <br/><img src='/images/photo_2024-10-17_12-59-05.jpg' style='width:50%;'>"
 collection: portfolio
 ---
 
