--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,6 +1,6 @@
 ---
 title: "WSU Intramural Futsal League Championship"
-excerpt: "NSF NRT Annual Meeting (All Participating Trainees) <br/><img src='/images/IMG_1681.jpg' style='width:50%;'>"
+excerpt: "NSF NRT Annual Meeting (All Participating Trainees) <br/><img src='/images/IMG_1681.JPG' style='width:50%;'>"
 collection: portfolio
 ---
 
