--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -1,7 +1,9 @@
 ---
-title: "WSU Intramural Futsal League Championship"
-excerpt: "NSF NRT Annual Meeting (All Participating Trainees) <br/><img src='/images/IMG_1681.JPG' style='width:80%;'>"
+title: "NSF NRT Annual Meeting"
+excerpt:  All Participating Trainees <br/><img src='/images/IMG_1681.JPG' style='width:80%;'>"
 collection: portfolio
 ---
 
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+<!-- title: "WSU Intramural Futsal League Championship" -->
+<!-- excerpt: "Team (served as the captain) <br/><img src='/images/photo_2024-10-17_12-59-05.jpg' style='width:50%;'>" -->
