--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACC 2025 Experiment Video</title>
+</head>
+<body>
+    <h2>Experimental Results</h2>
+    <p>
+        Below is a video showcasing experimental results on quadrotor and quadruped hardware, 
+        which supplements our manuscript submission to ACC2025.
+    </p>
+    
+    <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/81fTSio4EuY?si=oJoqjI5UivjM7EJG" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
 
+    <p>
+        For a higher resolution view, click the icon in the top right to expand the video.
+    </p>
+</body>
+</html>
