--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -11,7 +11,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            margin: 20px;
+            margin: 10px;
         }
 
         .container {
@@ -50,7 +50,7 @@
         </div>
 
         <p>
-            For a higher resolution view, click the icon in the top right to expand the video.
+            For a higher resolution view, click the icon in the bottom left to expand the video.
         </p>
     </div>
 </body>
