--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -35,7 +35,7 @@
     <div class="container">
         <h2>Experimental Results</h2>
         <p>
-            Below is a video showcasing experimental results on quadrotor and quadruped hardware, 
+            Below is a video showcasing experimental results on quadrotor hardware, 
             which supplements our manuscript submission to ACC2025.
         </p>
         
