--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -11,7 +11,8 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            margin: 10px;
+            margin: 20px;
+            font-size: 18px;
         }
 
         .container {
