--- a/tac2025/index.html
+++ b/tac2025/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <p>
             Below is a video showcasing experimental results on quadrotor hardware, 
-            which supplements our manuscript submission to ACC2025.
+            which supplements our manuscript submission to IEEE transaction on automatic control.
         </p>
         
         <div class="video-container">
