--- a/tac2025/index.html
+++ b/tac2025/index.html
@@ -48,7 +48,7 @@
                 allowfullscreen>
             </iframe>
         </div>
-
+<p><a href="https://youtu.be/81fTSio4EuY?si=oJoqjI5UivjM7EJG" target="_blank">Watch the video here</a></p>
         <p>
             For a higher resolution view, click the icon in the bottom left to expand the video.
         </p>
