--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <p>
-            Below is a video showcasing experimental results on quadrotor hardware, 
+            Below is a video showcasing experimental results on Locobot WX250s, 
             which supplements our manuscript submission to ACC2025.
         </p>
         
