--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -50,7 +50,12 @@
         </div>
 
         <p>
-            For a higher resolution view, click the icon in the bottom left to expand the video.  Simulation and experiment codes are available at the following URL: \href{https://github.com/mhsnar/Danger_Awareness.git}{https://github.com/mhsnar/Danger\_Awareness/ACC2025.git}. 
+            For a higher resolution view, click the icon in the bottom left to expand the video.  Simulation and experiment codes are available at the following:
+            
+          <a href="https://github.com/mhsnar/Danger_Awareness/ACC2025.git" target="_blank" rel="noopener noreferrer">
+    GitHub Repository
+</a>
+
         </p>
     </div>
 </body>
