--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -52,7 +52,7 @@
         <p>
             For a higher resolution view, click the icon in the bottom left to expand the video.  Simulation and experiment codes are available at the following:
             
-          <a href="https://github.com/mhsnar/Danger_Awareness/ACC2025.git" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/mhsnar/Danger_Awareness/tree/main/ACC2025" target="_blank" rel="noopener noreferrer">
     GitHub Repository
 </a>
 
