--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -35,13 +35,13 @@
 <body>
     <div class="container">
         <p>
-            Below is a video showcasing experimental results on Locobot WX250s, 
+            Below is a video showcasing both simulation and experimental results on Locobot WX250s, 
             which supplements our manuscript submission to ACC2025.
         </p>
         
         <div class="video-container">
             <iframe 
-                src="" 
+                src="https://youtu.be/G5T776pCAQI?si=1DLYGtH0MW9Az2Wx" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
