--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -41,7 +41,7 @@
         
         <div class="video-container">
             <iframe 
-                src="https://youtu.be/G5T776pCAQI?si=1DLYGtH0MW9Az2Wx" 
+                src="https://www.youtube.com/watch?v=G5T776pCAQI" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
