--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <p>
-            For a higher resolution view, click the icon in the bottom left to expand the video.  Simulation and experiment codes are available at the following:
+            For a higher resolution view, click the icon in the bottom right to expand the video.  Simulation and experiment codes are available at the following:
             
           <a href="https://github.com/mhsnar/Danger_Awareness/tree/main/ACC2025" target="_blank" rel="noopener noreferrer">
     GitHub Repository
