--- a/tac2025/index.html
+++ b/tac2025/index.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <p>
-            Below is a video showcasing experimental results on quadrotor hardware, 
+            Below is a video showcasing experimental results on drone hardware, 
             which supplements our manuscript submission to IEEE transaction on automatic control.
         </p>
         
