--- a/tac2025/index.html
+++ b/tac2025/index.html
@@ -27,8 +27,8 @@
         }
 
         iframe {
-            width: 800px; /* Increase video size */
-            height: 450px;
+            width: 800px;
+            height: 600px; /* 4:3 aspect ratio */
         }
     </style>
 </head>
@@ -36,11 +36,18 @@
     <div class="container">
         <p>
             Below is a video showcasing experimental results on drone hardware, 
-            which supplements our manuscript submission to IEEE transaction on automatic control.
+            which supplements our manuscript submission to IEEE Transactions on Automatic Control.
         </p>
         
         <div class="video-container">
-            <iframe width="560" height="420" src="https://www.youtube.com/embed/sPeUhQ82Mpc?si=CHazMKc61oGzK1G3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe 
+                src="https://www.youtube.com/embed/sPeUhQ82Mpc?si=CHazMKc61oGzK1G3" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+            </iframe>
         </div>
 
         <p>
@@ -49,4 +56,3 @@
     </div>
 </body>
 </html>
-
