--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -1,1 +1,7 @@
+---
+title: "2025 NSF NRT-LEAD Program Reward"
+excerpt: "Best oral presentation award <br/><img src='/images/photo_2024-09-16_17-24-52.jpg' style='width:50%;'>"
+collection: portfolio
+---
 
+This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
