--- a/acc2025/index.html
+++ b/acc2025/index.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <p>
-            Below is a video showcasing both simulation and experimental results on Locobot WX250s, 
+            Below is a video showcasing the experimental results on Locobot WX250s, 
             which supplements our manuscript submission to ACC2025.
         </p>
         
