--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACC 2025</title>
+    <title>ACC 2026</title>
 
     <!-- Import Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -35,8 +35,7 @@
 <body>
     <div class="container">
         <p>
-            Below is a video showcasing the experimental results on Locobot WX250s, 
-            which supplements our manuscript submission to ACC2025.
+            Below is a video showcasing the numerical experiments which supplements our manuscript submission to ACC2026.
         </p>
         
         <div class="video-container">
