--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -27,8 +27,8 @@
         }
 
         iframe {
-            width: 800px; /* Increase video size */
-            height: 450px;
+            width: 600px; /* Increase video size */
+            height: 3378px;
         }
     </style>
 </head>
@@ -37,7 +37,7 @@
         <p>
             Below is a video showcasing the numerical experiments which supplements our manuscript submission to ACC2026.
         </p>
-        
+        <a href="https://youtu.be/tuqSxhRQH-Y" title=""><img src="" width="100%" style="max-width: 850px;" alt=""></a><br>Provided by <a href="" target="_blank"></a>
         <div class="video-container">
              <iframe 
                 src="https://www.youtube.com/embed/tuqSxhRQH-Y" 
