--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -76,7 +76,10 @@
         </div>
         
         <p>
-            For a higher resolution view, click the icon in the bottom left to expand the video.  
+            For a higher resolution view, click the icon in the bottom left to expand the video.  Simulation and experiment codes are available at the following:
+            
+          <a href="https://github.com/mhsnar/Danger_Awareness/tree/main/ACC2025" target="_blank" rel="noopener noreferrer">
+            GitHub Repository
         </a>
 
         </p>
