--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -1,88 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACC 2026</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACC 2026</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 20px;
-            font-size: 14px;
-        }
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 20px;
+            font-size: 14px;
+        }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .video-wrapper {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
+        .container {
+            max-width: 1200px; /* Adjusted to fit two videos */
+            margin: 0 auto; /* Center the content */
+        }
 
-        .video-container {
-            width: 50%;
-            display: flex;
-            flex-direction: column; /* Stack title on top of video */
-            align-items: center; /* Center content horizontally */
-        }
+        .video-wrapper {
+            display: flex; /* Use flexbox for side-by-side layout */
+            justify-content: center; /* Center the videos horizontally */
+            gap: 20px; /* Add space between videos */
+            margin-top: 20px;
+        }
 
-        .video-title {
-            font-size: 16px;
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 10px; /* Space between title and video */
-            color: #333;
-        }
-        iframe {
-            width: 100%;
-            aspect-ratio: 16 / 9;
-            border-radius: 8px;
-        }
-    </style>
+        .video-container {
+            width: 50%; /* Each video container takes up 50% of the wrapper */
+            /* Removed flex-end, now using center on the wrapper */
+        }
+
+        iframe {
+            width: 100%; /* Make the iframe responsive within its container */
+            aspect-ratio: 16 / 9; /* Maintains 16:9 aspect ratio */
+            border-radius: 8px; /* Optional: adds rounded corners to the videos */
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <p>
-            Below is a video showcasing the numerical experiments which supplements our manuscript submission to ACC2026.
-        </p>
-        <a href="https://youtu.be/tuqSxhRQH-Y" title=""><img src="" width="100%" style="max-width: 850px;" alt=""></a><br> <a href="" target="_blank"></a>
-        <div class="video-wrapper">
-            <div class="video-container">
-                <h2 class="video-title">Real-Time Solution of Time-Varying Constrained Convex Optimization</h2>
-                <iframe 
-                    src="https://www.youtube.com/embed/tuqSxhRQH-Y" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen>
-                </iframe>
-            </div>
-            <div class="video-container">
-                <h2 class="video-title">Multi-agent Tracking of Unknown Targets</h2>
-                <iframe 
-                    src="https://www.youtube.com/embed/gun6DomO5Do" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </div>
-        
-        <p>
-            For a higher resolution view, click the icon in the bottom left to expand the video.  Simulation and experiment codes are available at the following:
-            
-          <a href="https://github.com/mhsnar/Danger_Awareness/tree/main/ACC2025" target="_blank" rel="noopener noreferrer">
-            GitHub Repository
-        </a>
+    <div class="container">
+        <p>
+            Below is a video showcasing the numerical experiments which supplements our manuscript submission to ACC2026.
+        </p>
+        <a href="https://youtu.be/tuqSxhRQH-Y" title=""><img src="" width="100%" style="max-width: 850px;" alt=""></a><br> <a href="" target="_blank"></a>
+        <div class="video-wrapper">
+            <div class="video-container">
+                <iframe 
+                    src="https://www.youtube.com/embed/tuqSxhRQH-Y" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="video-container">
+                <iframe 
+                    src="https://www.youtube.com/embed/gun6DomO5Do" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+        
+        <p>
+            For a higher resolution view, click the icon in the bottom left to expand the video.  
 
-        </p>
-    </div>
+        </p>
+    </div>
 </body>
 </html>
