--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -38,6 +38,8 @@
         }
     </style>
 </head>
+
+    
 <body>
     <div class="container">
         <p>
@@ -46,13 +48,7 @@
         <a href="https://youtu.be/tuqSxhRQH-Y" title=""><img src="" width="100%" style="max-width: 850px;" alt=""></a><br> <a href="" target="_blank"></a>
         <div class="video-wrapper">
             <div class="video-container">
-                <iframe 
-                    src="https://www.youtube.com/embed/tuqSxhRQH-Y" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen>
-                </iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/qGsw7iaElCI?si=KBF4nOYrz7omClF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="video-container">
                 <iframe 
