--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -1,139 +1,73 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACC 2026</title>
 
-    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 20px;
+            font-size: 14px;
+        }
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
 
-    <title>ACC 2026</title>
+        .video-wrapper {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
 
+        .video-container {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 
+        .video-title {
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 10px;
+            color: #333;
+        }
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    
-
-    <style>
-
-        body {
-
-            font-family: 'Roboto', sans-serif;
-
-            margin: 20px;
-
-            font-size: 14px;
-
-        }
-
-
-
-        .container {
-
-            max-width: 1200px; /* Adjusted to fit two videos */
-
-            margin: 0 auto; /* Center the content */
-
-        }
-
-
-
-        .video-wrapper {
-
-            display: flex; /* Use flexbox for side-by-side layout */
-
-            justify-content: center; /* Center the videos horizontally */
-
-            gap: 20px; /* Add space between videos */
-
-            margin-top: 20px;
-
-        }
-
-
-
-        .video-container {
-
-            width: 50%; /* Each video container takes up 50% of the wrapper */
-
-            /* Removed flex-end, now using center on the wrapper */
-
-        }
-
-
-
-        iframe {
-
-            width: 100%; /* Make the iframe responsive within its container */
-
-            aspect-ratio: 16 / 9; /* Maintains 16:9 aspect ratio */
-
-            border-radius: 8px; /* Optional: adds rounded corners to the videos */
-
-        }
-
-    </style>
-
+        iframe {
+            width: 100%;
+            aspect-ratio: 16 / 9;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 
-
-
-    
-
 <body>
-
-    <div class="container">
-
-        <p>
-
-            Below is a video showcasing the numerical experiments which supplements our manuscript submission to ACC2026.
-
-        </p>
-
-        <a href="https://youtu.be/tuqSxhRQH-Y" title=""><img src="" width="100%" style="max-width: 850px;" alt=""></a><br> <a href="" target="_blank"></a>
-
-        <div class="video-wrapper">
-
-            <div class="video-container">
-
-               <iframe width="650" height="315" src="https://www.youtube.com/embed/qGsw7iaElCI?si=KBF4nOYrz7omClF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-            </div>
-
-            <div class="video-container">
-
-                <iframe 
-
-                    src="https://www.youtube.com/embed/gun6DomO5Do" 
-
-                    title="YouTube video player" 
-
-                    frameborder="0" 
-
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-
-                    allowfullscreen>
-
-                </iframe>
-
-            </div>
-
-        </div>
-
-        
-
-        <p>
-
-            For a higher resolution view, click the icon in the bottom left to expand the video.  
-
-
-
-        </p>
-
-    </div>
-
+    <div class="container">
+        <p>
+            Below is a video showcasing the numerical experiments which supplements our manuscript submission to ACC2026.
+        </p>
+        <div class="video-wrapper">
+            <div class="video-container">
+                <h2 class="video-title">A Dynamic Embedding Approach</h2>
+                <iframe src="https://www.youtube.com/embed/qGsw7iaElCI?si=KBF4nOYrz7omClF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-container">
+                <h2 class="video-title">Multi-agent Tracking</h2>
+                <iframe src="https://www.youtube.com/embed/gun6DomO5Do" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        
+        <p>
+            For a higher resolution view, click the icon in the bottom left to expand the video.
+        </p>
+    </div>
 </body>
-
 </html>
