--- a/acc2026/index.html
+++ b/acc2026/index.html
@@ -56,11 +56,11 @@
         </p>
         <div class="video-wrapper">
             <div class="video-container">
-                <h2 class="video-title">A Dynamic Embedding Approach</h2>
+                <h2 class="video-title">Collision-free Robot Navigation</h2>
                 <iframe src="https://www.youtube.com/embed/qGsw7iaElCI?si=KBF4nOYrz7omClF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="video-container">
-                <h2 class="video-title">Multi-agent Tracking</h2>
+                <h2 class="video-title">Multi-agent Tracking of Unknown Targets</h2>
                 <iframe src="https://www.youtube.com/embed/gun6DomO5Do" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
