--- a/L-CSS26/index.html
+++ b/L-CSS26/index.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <p>
-            Below is a video showcasing the numerical experiments which supplements our manuscript submission to L-CSS.
+            Below is a video showcasing the numerical experiments which supplements our manuscript submission to L-CSS 2026.
         </p>
         <div class="video-wrapper">
             <div class="video-container">
