Update video expansion instructions in index.html

--- a/TVO2025/index.html
+++ b/TVO2025/index.html
@@ -66,7 +66,7 @@
         </div>
         
         <p>
-            For a higher resolution view, click the icon in the bottom left to expand the video.
+            For a higher resolution view, click the icon in the bottom right to expand the video.
         </p>
     </div>
 </body>
