Update YouTube video source in index.html

--- a/IROS2026a/index.html
+++ b/IROS2026a/index.html
@@ -41,7 +41,7 @@
         
         <div class="video-container">
             <iframe 
-                src="https://www.youtube.com/ueBRUHRm1xo?si=15nrNe7aGkKmjIdb"
+                src="https://www.youtube.com/ueBRUHRm1xo?si=qifX-UHcm9ht1yIz"
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
